--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -1,4 +1,4 @@
-<div class="alert alert-transparent text-center" data-ng-if="justus.julkaisu.id">
+<div class="alert alert-default text-center text-secondary" data-ng-if="justus.julkaisu.id">
   <h4>Muokkaat julkaisua {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</h4>
   <button class="btn btn-primary" data-ng-click="clearFormAndReturnToStart()">
     Hylkää muutokset ja siirry alkuun
