Change language and country selections to dropdowns.

--- a/src/app/scss/components/_ui-select.scss
+++ b/src/app/scss/components/_ui-select.scss
@@ -47,6 +47,13 @@
   }
 }
 
+.strong-placeholder {
+  .ui-select-placeholder {
+    color: $gray-darker;
+    font-weight: 500;
+  }
+}
+
 .ui-select-match.no-ellipsis span {
   text-overflow: initial;
 }
