--- a/src/app/html/justus/esitayta.html
+++ b/src/app/html/justus/esitayta.html
@@ -52,54 +52,100 @@
     </div>
 
     <div class="row px">
-        <div class="col-xs-12">
-            <label id="julkaisunnimihaku"
+        <div class="col-xs-11">
+            <label for="julkaisunnimihaku"
                    class="h3 text-dark">{{i18n.content.esitayta.etsijulkaisu.title[lang]}}
             </label>
             <p data-ng-bind="i18n.content.esitayta.etsijulkaisu.info[lang]"></p>
+
+        </div>
+    </div>
+
+    <div class="row px">
+        <div class="col-xs-11">
+            <label class="control-label font-weight-bold"
+                   for="tekijannimi">
+                Rajaa hakua halutessasi tekijän nimellä (valinnainen)
+            </label>
             <div class="form-group">
-                <input aria-label="tekijannimi"
+                <input id="tekijannimi"
                        type="text" class="form-control"
                        data-ng-model="julkaisunhakutekija"
                        placeholder="{{i18n.content.esitayta.etsijulkaisu.tekija.tooltip[lang]}}">
             </div>
-            <div class="form-group">
-                <ui-select
-                        aria-labelledby="julkaisunnimihaku"
-                        data-ng-model="julkaisu.selected"
-                        theme="bootstrap" uis-open-close="onOpenClose(isOpen, $select.selected.title)">
-                    <ui-select-match class="ui-select-match"
-                                     placeholder="{{i18n.content.esitayta.etsijulkaisu.picktip[lang]}}">
-                        {{$select.selected.title}}
-                    </ui-select-match>
-                    <ui-select-choices repeat="o in julkaisunnimet | filter: $select.search"
-                                       refresh="refreshJulkaisunnimet($select.search,julkaisunhakutekija)"
-                                       refresh-delay="2000">
-                        <div>
-                            <span class="justus-dim-sm">{{o.source}} {{o.doi}}</span>
-                            <br>{{o.title}}
-                            <br>{{o.author}}
-                        </div>
-                    </ui-select-choices>
-                </ui-select>
-            </div>
         </div>
     </div>
+
+
     <div class="row px">
-        <div class="col-xs-6">
-            <i class="fa fa-spinner fa-spin fa-3x pull-right" data-ng-show="virtaLataa"></i>
+        <div class="col-xs-11">
+            <label class="control-label font-weight-bold"
+                   for="julkaisunnimihaku">
+                {{i18n.content.esitayta.etsijulkaisu.picktip[lang]}}
+            </label>
+            <input class="form-control" type="text"
+                   data-ng-model="hakusana"
+                   id="julkaisunnimihaku"
+                   placeholder="{{i18n.content.esitayta.etsijulkaisu.picktip[lang]}}">
+            <div class="btn-group" uib-dropdown is-open="searchDropDownStatus.isopen">
+                <ul class="custom-dropdown position-relative" uib-dropdown-menu role="menu"
+                    aria-labelledby="julkaisunnimihaku">
+                    <li role="menuitem"
+                        class="cursor-pointer"
+                        data-ng-repeat="julkaisu in julkaisunnimet"
+                        data-ng-click="valitseJulkaisu(julkaisu)">
+                        <span class="justus-dim-sm">{{julkaisu.source}} {{julkaisu.doi}}</span>
+                        <br> <span class="font-weight-bold">{{julkaisu.title}}</span>
+                        <br>{{julkaisu.author}}
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-1">
             <button type="button"
-                    class="btn btn-primary  pull-right"
-                    data-ng-click="useJulkaisunnimi(julkaisu.selected.source, julkaisu.selected.identifier)"
+                    style="margin-top:27px;"
+                    class="btn btn-primary"
+                    data-ng-click="refreshJulkaisunnimet($event, hakusana, julkaisunhakutekija)">Hae
+            </button>
+        </div>
+    </div>
+
+    <div data-ng-show="noResults" class="row px">
+        <div class="col-xs-12">
+            <p class="text-secondary text-dark pl-x text-xl">Ei hakutuloksia annetuilla hakuehdoilla.</p>
+        </div>
+    </div>
+
+    <div class="row px" data-ng-show="valittuJulkaisu">
+        <div class="col-xs-12">
+            <p class="text-secondary h4 font-weight-bold">Valittuna julkaisu:</p>
+
+            <p class="h4 text-dark">
+                <span>{{valittuJulkaisu.source}}</span>  <span class="pl-x">{{valittuJulkaisu.doi}}</span>
+            </p>
+            <p class="h4 text-dark font-weight-bold">
+                {{valittuJulkaisu.title}}
+            </p>
+            <p class="h4 text-dark">
+            {{valittuJulkaisu.author}}
+            </p>
+            <button type="button"
+                    class="btn btn-primary mt-x"
+                    data-ng-click="useJulkaisunnimi(valittuJulkaisu.source, valittuJulkaisu.identifier)"
                     data-ng-bind="i18n.content.esitayta.hae[lang]">
             </button>
         </div>
     </div>
 
 </div>
-<div class="row" data-ng-show="julkaisu.selected.organisation == user.organization.code">
+
+    <div class="row px">
+        <div class="col-xs-6">
+            <i class="fa fa-spinner fa-spin fa-3x pull-right" data-ng-if="virtaLataa"></i>
+        </div>
+    </div>
+
+<div class="row" data-ng-show="valittuJulkaisu.organisation == user.organization.code">
     <div class="col-xs-12">
         <h3>
             *Mahdollinen duplikaatti*
@@ -107,7 +153,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" style="margin-top:100px">
     <div class="col-xs-12 text-center">
         <button type="button" class="btn btn-lg btn-primary" data-ng-click="julkaisuhaettu=true; useVaihe(2)">
             {{ i18n.content.esitayta.ohita[lang] }}
