--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -987,9 +987,9 @@
          </i>
          <i data-ng-if="isFieldRequired('julkaisunkieli')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
        </div>
-       <div class="col-sm-8 col-xs-12 justus-data" >
+       <div class="col-sm-8 col-xs-12 justus-data">
          <div class="row">
-           <div class="col-xs-12">
+           <div class="col-xs-10">
                <ui-select aria-labelledby="julkaisunkieli"
                        data-ng-model="julkaisunkieli.selected"
                           data-ng-class="{ 'strong-placeholder': justus.julkaisu.julkaisunkieli }"
@@ -1005,6 +1005,12 @@
                     {{o.selite }}
                  </ui-select-choices>
                </ui-select>
+           </div>
+           <div class="col-xs-2">
+              <button class="btn btn-primary"
+                          data-ng-bind="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.tyhjenna[lang]"
+                          data-ng-click="resetField('julkaisunkieli')">
+              </button>
            </div>
          </div>
        </div>
@@ -1073,7 +1079,7 @@
        </div>
        <div class="col-sm-8 col-xs-12 justus-data">
          <div class="row">
-           <div class="col-xs-12">
+           <div class="col-xs-10">
              <ui-select aria-labelledby="julkaisumaa"
                         data-ng-model="julkaisumaa.selected"
                         data-ng-class="{ 'strong-placeholder': justus.julkaisu.julkaisumaa }"
@@ -1089,6 +1095,12 @@
                  {{o.arvo }} {{o.selite }}
                </ui-select-choices>
              </ui-select>
+           </div>
+           <div class="col-xs-2">
+             <button class="btn btn-primary"
+                     data-ng-bind="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.tyhjenna[lang]"
+                     data-ng-click="resetField('julkaisumaa')">
+             </button>
            </div>
          </div>
        </div>
