--- a/src/app/html/justus/esitayta.html
+++ b/src/app/html/justus/esitayta.html
@@ -21,9 +21,9 @@
   </div>
 </div -->
 
-<div class="alert alert-transparent text-center" data-ng-if="justus.julkaisu.id">
-    <h4>Muokkaat julkaisua {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</h4>
-    <button class="btn btn-primary" data-ng-click="clearFormAndReturnToStart()">Hylkää muutokset</button>
+<div class="alert alert-default text-center" data-ng-if="justus.julkaisu.id">
+    <h4 class="text-secondary">Muokkaat julkaisua {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</h4>
+    <button class="btn btn-primary" data-ng-click="clearFormAndReturnToStart()">Hylkää muutokset ja siirry alkuun</button>
 </div>
 
 <div class="esitaytto-container px">
