--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -1738,14 +1738,21 @@
 
 <!-- JATKA -->
 <div class="row form-group px m-t">
-  <div class="col-md-4 margin-bottom-md">
+  <div class="col-md-3 margin-bottom-md">
+    <button class="btn btn-info btn-lg btn-block"
+            type="reset"
+            data-ng-click="useVaihe(2)">
+      Palaa edelliseen vaiheeseen
+    </button>
+  </div>
+  <div class="col-md-3 margin-bottom-md">
     <button class="btn btn-danger btn-lg btn-block"
             type="reset"
             data-ng-click="cancelAndGoToPublicationListing()">
-      {{i18n.content.tietojensyotto.keskeyta[lang]}}
+      Hylkää
     </button>
   </div>
-  <div class="col-md-8">
+  <div class="col-md-6">
     <button class="btn btn-lg btn-block btn-primary"
             type="button"
             data-ng-click="useVaihe(4)">
