--- a/src/app/html/tarkasta.html
+++ b/src/app/html/tarkasta.html
@@ -43,66 +43,82 @@
 <div data-ng-if="user.role === 'admin' || user.role === 'owner'">
   <div data-ng-show="!publications.odottavat">
     <div class="publication-search">
-      <div class="row pxs">
-        <div class="col-sm-8">
-          <div class="form-group">
-            <label for="vapaasanahaku"
-                   class="control-label">
-              Vapaasana / ID haku
-            </label>
-            <input id="vapaasanahaku"
-                   type="text" class="form-control"
-                   data-ng-model="search.vapaasanahaku"
-                   data-ng-keyup="$event.keyCode == 13 && searchPublications()"
-                   placeholder="{{i18n.content.tarkasta.haku.tekija[lang]}}"/>
+      <uib-accordion class="text-secondary">
+        <div uib-accordion-group class="panel-default"
+             is-open="status.open"
+             data-ng-class="{'opened': status.open}">
+          <uib-accordion-heading class="bg-light">
+            <div>
+              Hae julkaisuista
+              <i class="pull-right glyphicon"
+                 data-ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+            </div>
+          </uib-accordion-heading>
+          <div class="p-1">
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="form-group">
+                  <label for="vapaasanahaku"
+                         class="control-label">
+                    Vapaasana / ID haku
+                  </label>
+                  <input id="vapaasanahaku"
+                         type="text" class="form-control"
+                         data-ng-model="search.vapaasanahaku"
+                         data-ng-keyup="$event.keyCode == 13 && searchPublications()"
+                         placeholder="{{i18n.content.tarkasta.haku.tekija[lang]}}"/>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <label for="vuosihaku"
+                         class="control-label">
+                    Julkaisuvuosi
+                  </label>
+                  <input id="vuosihaku"
+                         type="number" class="form-control"
+                         data-ng-keyup="$event.keyCode == 13 && searchPublications()"
+                         data-ng-model="search.julkaisuvuosi"
+                         placeholder="{{i18n.content.tarkasta.haku.julkaisuvuosi[lang]}}"/>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <label class="control-label">Julkaisun tila</label>
+                  <ui-select data-ng-model="search.julkaisuntila"
+                             theme="bootstrap">
+                    <ui-select-match class="ui-select-match no-ellipsis"
+                                     placeholder="{{i18n.content.tarkasta.haku.julkaisuntila[lang]}}">
+                      {{ search.julkaisuntila.name || search.julkaisuntila }}
+                    </ui-select-match>
+                    <ui-select-choices
+                            repeat="state in julkaisuntilat">
+                      {{ state.name }}
+                    </ui-select-choices>
+                  </ui-select>
+                </div>
+              </div>
+            </div>
+            <div class="row m-t">
+              <div class="col-sm-8">
+                <button class="btn btn-primary btn-block"
+                        data-ng-click="searchPublications()"
+                        data-ng-disabled="!search.vapaasanahaku && !search.julkaisuvuosi && !search.julkaisuntila"
+                        data-ng-bind="i18n.content.tarkasta.haku.hae[lang]">
+                </button>
+              </div>
+              <div class="col-sm-4">
+                <button class="btn btn-default btn-block"
+                        data-ng-click="resetData()"
+                        data-ng-bind="i18n.content.tarkasta.haku.tyhjenna[lang]">
+                </button>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-sm-4 pl-0">
-          <div class="form-group">
-            <label for="vuosihaku"
-                   class="control-label">
-              Julkaisuvuosi
-            </label>
-            <input id="vuosihaku"
-                   type="number" class="form-control"
-                   data-ng-keyup="$event.keyCode == 13 && searchPublications()"
-                   data-ng-model="search.julkaisuvuosi"
-                   placeholder="{{i18n.content.tarkasta.haku.julkaisuvuosi[lang]}}"/>
-          </div>
-        </div>
-      </div>
-      <div class="row form-group  pxs">
-        <div class="col-sm-1">
-          <label class="control-label">Julkaisun tila</label>
-        </div>
-        <div class="col-sm-5">
-          <ui-select data-ng-model="search.julkaisuntila"
-                     theme="bootstrap">
-            <ui-select-match class="ui-select-match no-ellipsis"
-                             placeholder="{{i18n.content.tarkasta.haku.julkaisuntila[lang]}}">
-              {{ search.julkaisuntila.name || search.julkaisuntila }}
-            </ui-select-match>
-            <ui-select-choices
-                    repeat="state in julkaisuntilat">
-              {{ state.name }}
-            </ui-select-choices>
-          </ui-select>
-        </div>
-        <div class="col-sm-4">
-          <button class="btn btn-primary btn-block"
-                  data-ng-click="searchPublications()"
-                  data-ng-disabled="!search.vapaasanahaku && !search.julkaisuvuosi && !search.julkaisuntila"
-                  data-ng-bind="i18n.content.tarkasta.haku.hae[lang]">
-          </button>
-        </div>
-
-        <div class="col-sm-2">
-          <button class="btn btn-default btn-block"
-                  data-ng-click="resetData()"
-                  data-ng-bind="i18n.content.tarkasta.haku.tyhjenna[lang]">
-          </button>
-        </div>
-      </div>
+      </uib-accordion>
     </div>
   </div>
 </div>
@@ -153,8 +169,7 @@
                 <span class="fa fa-sort-asc" data-ng-if="colOrder=='julkaisu.username' && (colOrderReverse)"></span>
               </th>
               <th data-ng-if="showPublicationLink">
-                <span >Julkaisun tiedosto
-                </span>
+                <span data-ng-bind="i18n.content.tarkasta.table.julkaisu[lang]"></span>
               </th>
               <th data-ng-show="state.name=='hyvaksy'"
                   data-ng-click="colOrderReverse=!(colOrder=='julkaisuntila'?colOrderReverse:false); colOrder='julkaisuntila'"
@@ -186,8 +201,11 @@
               </td>
               <td data-ng-if="showPublicationLink">
                 <span data-ng-show="d.filedata">
-                  <a data-ng-href="{{d.filedata.handle}}" data-ng-class="{'text-gray': !d.filedata.handle, 'no-underline': !d.filedata.handle}"  data-ng-disabled="!d.filedata.handle" target="_blank">
-                    <span >Tiedosto</span>
+                  <a data-ng-href="{{d.filedata.handle}}" data-ng-class="{'text-gray': !d.filedata.handle, 'no-underline': !d.filedata.handle}"
+                     data-ng-disabled="!d.filedata.handle"
+                     class="nowrap"
+                     target="_blank">
+                    <span data-ng-bind="i18n.content.tarkasta.table.tietue[lang]"></span>
                    <i title="Avaa julkaisu Theseuksessa" class="fa fa-external-link"> </i>
 
                   </a>
