--- a/src/app/scss/components/_panels.scss
+++ b/src/app/scss/components/_panels.scss
@@ -51,5 +51,13 @@
   color: $brand-white
 }
 
+.publication-search {
+  .panel-body {
+    background: #eee;
+  }
+  .form-control {
+    background: #fff;
+  }
+}
 
 
