--- a/src/app/scss/components/_form.scss
+++ b/src/app/scss/components/_form.scss
@@ -20,7 +20,7 @@
   background-color: lighten(#d2d3d5, 10%);
   font-family: $font-family-secondary;
   //background-color: lighten(#dac3ca, 10%);
-  border: 1px solid #d7d7d7;
+  border: 1px solid $brand-primary;
   box-shadow: none;
   font-weight: 500;
   &:focus {
