--- a/src/app/scss/components/_tags-input.scss
+++ b/src/app/scss/components/_tags-input.scss
@@ -1,11 +1,14 @@
 tags-input,
 .tags-input {
   min-height: 40px;
+  border: 1px solid $brand-primary;
+  border-radius: 2px !important;
   .tags {
     font-family: $font-family-secondary !important;
     background-color: lighten(#d2d3d5, 10%);
     border-radius: 2px;
     border: 1px solid #d7d7d7;
+    padding: 0;
     .input {
       font-family: $font-family-secondary !important;
       font-size: $font-size-xl;
@@ -56,7 +59,6 @@ tags-input,
 
 .tags.focused {
   border-color: $brand-primary-light !important;
-  border-width: 2px !important;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba($brand-primary-light, 0.6) !important;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba($brand-primary-light, 0.6) !important;
 }
