--- a/src/app/html/tarkasta.html
+++ b/src/app/html/tarkasta.html
@@ -1,17 +1,17 @@
 <div class="row no-gutter m-b">
   <div class="col-xs-6 text-center">
-    <div class="justus-btn justus-btn-stage" data-ng-class="{selected: publications.odottavat}"
+    <h2 class="justus-btn justus-btn-stage" data-ng-class="{selected: publications.odottavat}"
          data-ng-click="publications.odottavat=true; resetData()"
           data-ui-sref="{{state.name}}({tila:'odottavat'})">
       <span data-ng-bind="i18n.content.tarkasta.odottavat[lang]"></span>
-    </div>
+    </h2>
   </div>
   <div class="col-xs-6 text-center">
-    <div class="justus-btn justus-btn-stage" data-ng-class="{selected: !publications.odottavat}"
+    <h2 class="justus-btn justus-btn-stage" data-ng-class="{selected: !publications.odottavat}"
          data-ng-click="publications.odottavat=false; resetData()"
          data-ui-sref="{{state.name}}({tila:'kasitellyt'})">
       <span data-ng-bind="i18n.content.tarkasta.hyvaksytyt[lang]"></span>
-    </div>
+    </h2>
   </div>
 </div>
 
