Set validation errors for invalid fieldS.

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -568,7 +568,10 @@
             </div>
           </div>
         </div>
+        <span class="invalid-pattern text-secondary text-danger" aria-hidden="true">
+          Annettu ISBN on väärässä muodossa</span>
       </div>
+
     </div>
 
     <!-- Kenttä: Emojulkaisun toimittajat -->
@@ -718,6 +721,9 @@
             </button>
           </div>
         </div>
+       <!--  ota tämä group ja resetoi -->
+        <span class="invalid-pattern text-secondary text-danger" aria-hidden="true">
+          Annettu ISSN on väärässä muodossa</span>
       </div>
     </div>
 
