--- a/src/app/scss/components/_tags-input.scss
+++ b/src/app/scss/components/_tags-input.scss
@@ -1,19 +1,17 @@
 tags-input,
 .tags-input {
   min-height: 40px;
-  border: 1px solid $brand-primary;
-  border-radius: 2px !important;
   .tags {
     font-family: $font-family-secondary !important;
-    background-color: lighten(#d2d3d5, 10%);
+    background-color: #f9f9f9;
     border-radius: 2px;
-    border: 1px solid #d7d7d7;
+    border: 1px solid $brand-primary;
     padding: 0;
     .input {
       font-family: $font-family-secondary !important;
       font-size: $font-size-xl;
       padding-left: $padding-base-horizontal - 2px;
-      background-color: lighten(#d2d3d5, 10%);
+      background-color: #f9f9f9;
       box-shadow: none;
       min-height: 40px;
       font-weight: 300;
@@ -42,7 +40,6 @@ tags-input,
       border-radius: 2px;
       font-family: $font-family-secondary;
       padding: 4px 8px;
-      //font-size: 15px;
       height: 35px;
 
       &.selected {
@@ -58,9 +55,13 @@ tags-input,
 }
 
 .tags.focused {
-  border-color: $brand-primary-light !important;
+  border: 2px solid $brand-primary-light !important;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba($brand-primary-light, 0.6) !important;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba($brand-primary-light, 0.6) !important;
 }
 
-
+.has-error tags-input .tags.focused {
+  border-color: #7d1d2b !important;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d9596c !important;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d9596c !important;
+}
